ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,30 @@
 *.exe
 *.out
 *.app
+
+# autotools
+Makefile.in
+Makefile
+autom4te.cache
+/autoscan.log
+/autoscan-*.log
+/aclocal.m4
+/compile
+/config.guess
+/config.h.in
+/config.log
+/config.status
+/config.sub
+/configure
+/configure.scan
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+/config.h
+/libtool
+/ltmain.sh
+
+# other
+.deps
+/sdk2_unix.h
